update translation of articles/new-users to Russian
Reviewed by: maxim (mentor)
Approved by: maxim (mentor)
Differential Revision: https://reviews.freebsd.org/D51957

--- a/documentation/content/ru/articles/new-users/_index.adoc
+++ b/documentation/content/ru/articles/new-users/_index.adoc
@@ -1,8 +1,11 @@
 ---
-title: Пособие для новичков во FreeBSD и UNIX®
 authors:
-  - author: Annelise Anderson
+  - 
+    author: 'Annelise Anderson'
     email: andrsn@andrsn.stanford.edu
+description: 'Введение для пользователей, не знакомых с FreeBSD и UNIX®'
+tags: ["Introduction", "basics", "FreeBSD", "UNIX"]
+title: 'Для тех, кто новичок и в FreeBSD, и в UNIX®'
 trademarks: ["freebsd", "ibm", "microsoft", "opengroup", "general"]
 ---
 
@@ -49,11 +52,11 @@ toc::[]
 [[in-and-out]]
 == Регистрация в системе и выход из неё
 
-Зарегистрируйтесь в системе (когда увидите приглашение `login:`) как пользователь, которого вы создали во время установки, или войдите в систему как пользователь `root`. (В вашей установленной системе уже имеется учётная запись для пользователя `root`; который может переходить хоть куда и делать всё, что угодно, в том числе удаление необходимых для работы файлов, так что будьте внимательны!) Обозначения % и # в последующем тексте означают приглашения системы (ваше может отличаться от него), причём % обозначает обычного пользователя, а # пользователя `root`.
+Войдите в систему (когда увидите `login:`), используя пользователя, созданного во время установки, или как `root`. (В вашей установке FreeBSD уже будет учётная запись для `root`; этот пользователь может ходить куда угодно и делать что угодно, включая удаление важных файлов, так что будьте осторожны!) Символы % и # в дальнейшем обозначают приглашение командной строки (у вас оно может выглядеть иначе), где % означает обычного пользователя, а # — `root`.
 
 Чтобы выйти из системы (и получить новое приглашение `login:`) наберите
 
-[source,shell]
+[source, shell]
 ....
 # exit
 ....
@@ -62,21 +65,21 @@ toc::[]
 
 Для завершения работы машины наберите
 
-[source,shell]
+[source, shell]
 ....
 # /sbin/shutdown -h now
 ....
 
 Или, для перезагрузки нужно набрать
 
-[source,shell]
+[source, shell]
 ....
 # /sbin/shutdown -r now
 ....
 
 или
 
-[source,shell]
+[source, shell]
 ....
 # /sbin/reboot
 ....
@@ -88,7 +91,7 @@ toc::[]
 
 Если при установке системы вы не создали ни одного пользователя, и поэтому вошли в систему как `root`, то теперь вы должны создать пользователя по команде
 
-[source,shell]
+[source, shell]
 ....
 # adduser
 ....
@@ -97,7 +100,7 @@ toc::[]
 
 Предположим, что вы создали пользователя `jack` с полным именем __Jack Benimble__. Назначьте пользователю `jack` пароль, если информационная безопасность имеет значение (даже если это дети, которые могут стучать по клавиатуре). Когда вам будет задан вопрос по включению пользователя `jack` в другие группы, наберите `wheel`
 
-[source,shell]
+[source, shell]
 ....
 Login group is "jack". Invite jack into other groups: wheel
 ....
@@ -175,14 +178,14 @@ Login group is "jack". Invite jack into other groups: wheel
 
 Некоторые из этих команд работают не очень хорошо? Обе команды man:locate[1] и man:whatis[1] зависят от базы данных, которая перестраивается еженедельно. Если ваша машина будет оставаться включенной на выходные (и она работает под FreeBSD), то вы можете пожелать запускать определённые команды раз в день, неделю, месяц. Запускайте их как `root` и дайте каждой отработать, прежде чем запускать следующую.
 
-[source,shell]
+[source, shell]
 ....
 # periodic daily
-выдача опущена
+output omitted
 # periodic weekly
-выдача опущена
+output omitted
 # periodic monthly
-выдача опущена
+output omitted
 ....
 
 Если вам надоело ждать, нажмите kbd:[Alt+F2] для перехода в другую _виртуальную консоль_, и войдите в систему снова. В конце концов, это многопользовательская и многозадачная система. Тем не менее эти команды, скорее всего, в процессе работы будут выдавать сообщения вам на экран; вы можете набрать `clear` в приглашении для очистки экрана. Пока они работают, вы можете смотреть в содержимое файлов [.filename]#/var/mail/root# и [.filename]#/var/log/messages#.
@@ -196,14 +199,14 @@ Login group is "jack". Invite jack into other groups: wheel
 
 Перед тем, как редактировать файл, наверное, вы должны сохранить резервную копию. Предположим, что вы собираетесь отредактировать файл [.filename]#/etc/rc.conf#. Вы можете воспользоваться командой `cd /etc` для перехода в каталог [.filename]#/etc# и выполнить следующее:
 
-[source,shell]
+[source, shell]
 ....
 # cp rc.conf rc.conf.orig
 ....
 
 При этом файл [.filename]#rc.conf# скопируется в [.filename]#rc.conf.orig#, и в последующем вы сможете скопировать [.filename]#rc.conf.orig# в файл [.filename]#rc.conf# для восстановления оригинала. Но ещё лучше его переместить (переименовать), после чего скопировать обратно:
 
-[source,shell]
+[source, shell]
 ....
 # mv rc.conf rc.conf.orig
 # cp rc.conf.orig rc.conf
@@ -211,7 +214,7 @@ Login group is "jack". Invite jack into other groups: wheel
 
 потому что команда `mv` сохраняет исходную информацию о дате и владельце файла. Теперь вы можете редактировать [.filename]#rc.conf#. Если вы захотите восстановить исходное состояние, то выполните `mv rc.conf rc.conf.myedit` (полагаем, что вы хотите сохранить отредактированную версию), а затем
 
-[source,shell]
+[source, shell]
 ....
 # mv rc.conf.orig rc.conf
 ....
@@ -220,7 +223,7 @@ Login group is "jack". Invite jack into other groups: wheel
 
 Для редактирования файла наберите
 
-[source,shell]
+[source, shell]
 ....
 # vi filename
 ....
@@ -262,8 +265,8 @@ Login group is "jack". Invite jack into other groups: wheel
 kbd:[Ctrl+L]::
 для перерисовки экрана
 
-kbd:[Ctrl+b] и kbd:[Ctrl+f]::
-для перемотки на экран назад и вперёд, как при работе с `more` и `view`.
+kbd:[Ctrl+b] and kbd:[Ctrl+f]::
+для перелистывания экрана вперед и назад, как это делается в `more` и `view`.
 
 Поупражняйтесь с редактором `vi` в своём домашнем каталоге, создав новый файл по команде `vi _filename_`, добавляя и удаляя текст, сохраняя файл и вызывая его снова. Редактор `vi` преподносит некоторые сюрпризы, потому что он на самом деле достаточно сложный, и иногда вы можете неправильно вызвать команду, которая сделает нечто, чего вы не ожидали. (Некоторым людям действительно нравится `vi`-он более мощный, чем EDIT из DOS-посмотрите команду `:r`.) Для того, чтобы удостовериться, что вы находитесь в режиме команд, нажимайте kbd:[Esc] один или несколько раз, и начинайте снова с этого места, если возникли какие-то проблемы, часто сохраняйте текст командой `:w` и используйте `:q!` для того, чтобы прекратить работу и начать всё сначала (с вашей последней команды `:w`), если это нужно.
 
@@ -295,7 +298,7 @@ kbd:[Ctrl+b] и kbd:[Ctrl+f]::
 
 Используйте `find` для поиска [.filename]#filename# в [.filename]#/usr# или в любом из её подкаталогов при помощи команды
 
-[source,shell]
+[source, shell]
 ....
 % find /usr -name "filename"
 ....
@@ -313,7 +316,7 @@ kbd:[Ctrl+b] и kbd:[Ctrl+f]::
 
 Найдите нужный вам порт, скажем, `kermit`. На CDROM для него должен существовать каталог. Скопируйте этот подкаталог в каталог [.filename]#/usr/local# (хорошее место для программного обеспечения, которое вы добавляете, и которое должно быть доступно всем пользователям) такой командой:
 
-[source,shell]
+[source, shell]
 ....
 # cp -R /cdrom/ports/comm/kermit /usr/local
 ....
@@ -324,7 +327,7 @@ kbd:[Ctrl+b] и kbd:[Ctrl+f]::
 
 После этого по команде `cd` перейдите в подкаталог [.filename]#/usr/local/kermit#, в котором есть файл [.filename]#Makefile#. Наберите
 
-[source,shell]
+[source, shell]
 ....
 # make all install
 ....
@@ -343,13 +346,14 @@ kbd:[Ctrl+b] и kbd:[Ctrl+f]::
 Вот три шага по установке нового командного процессора:
 
 [.procedure]
+====
 . Установите командный процессор как порт или пакет, как вы обычно это делаете с другим портом или пакетом.
-. Работая как пользователь `root`, отредактируйте файл [.filename]#/etc/shells#, добавив в него строку с новой оболочкой, в нашем случае это [.filename]#/usr/local/bin/tcsh#, и сохраните файл. (Некоторые порты могут делать это за вас.)
-. Воспользуйтесь командой `chsh` для смены постоянно используемой вами оболочки на `tcsh`, либо наберите `tcsh` в командной строке для смены вашей оболочки без повторного входа в систему.
+. Используйте `chsh`, чтобы навсегда изменить оболочку на `tcsh`, или введите `tcsh` в командной строке, чтобы сменить оболочку без повторного входа в систему.
+====
 
 [NOTE]
 ====
-Менять командный процессор для пользователя `root` на что-то, отличающееся от `sh` или `csh`, в ранних версиях FreeBSD и во многих других версиях UNIX(R) может быть опасно; вы можете лишиться работающей оболочки при переходе системы в однопользовательский режим. Решением является использование `su -m` для того, чтобы стать пользователем `root`, что даст в качестве оболочки `tcsh`, но вы будете являться пользователем `root`, потому что оболочка является частью окружения. Вы можете сделать это постоянным, добавив в ваш файл [.filename]#.tcshrc# в качестве алиаса по такой команде:
+Может быть опасно изменять оболочку `root` на что-то отличное от `sh` или `csh` в ранних версиях FreeBSD и многих других версиях UNIX(R); у вас может не оказаться рабочей оболочки, когда система переведёт вас в однопользовательский режим. Решение заключается в использовании `su -m` для получения прав `root`, что даст вам `tcsh` в качестве оболочки `root`, так как оболочка является частью окружения. Вы можете сделать это постоянным, добавив в ваш [.filename]#.tcshrc# алиас с:
 
 [.programlisting]
 ....
@@ -369,7 +373,7 @@ set prompt = "%h %t %~ %# "
 Перечень других установленных переменных окружения вы можете получить, набрав `env` в приглашении командной строки. В результате, кроме всего прочего, будут показаны редактор, используемый по умолчанию, программа постраничной выдачи и тип терминала. Командой, полезной при входе в систему с удалённого места и невозможности запуска программы, потому что терминал не обладает некоторыми возможностями, является команда `setenv TERM vt100`.
 
 [[other]]
-== Остальное
+== Другие
 
 Работая как пользователь `root`, вы можете отмонтировать CDROM по команде `/sbin/umount /cdrom`, вытащить его из привода, вставить другой диск и смонтировать его командой `/sbin/mount_cd9660 /dev/cd0a /cdrom`, при этом предполагается, что `cd0a` является именем устройства для вашего привода CDROM. Самые последние версии FreeBSD позволяют вам монтировать CDROM просто по команде `/sbin/mount /cdrom`.
 
