--- a/website/content/en/usergroups/_index.adoc
+++ b/website/content/en/usergroups/_index.adoc
@@ -184,6 +184,9 @@ We are a community of FreeBSD enthusiasts and professionals dedicated to support
 Our group actively engages in writing documentation, contributing code, and conducting research to enhance the FreeBSD ecosystem.
 Whether you're an experienced developer or just starting with FreeBSD, join us in fostering collaboration and innovation within the Turkey FreeBSD community.
 
+link:https://ossmalta.eu/[Open Source Society Malta]::
+The Open Source Society Malta is a local community for the Open-Source Initiative in Malta supporting open-source enthusiasts and professionals.
+
 [[north-america]]
 === North America
 
