[ru/books]: Fix build errors

--- a/documentation/content/ru/books/fdp-primer/asciidoctor-primer/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/asciidoctor-primer/_index.adoc
@@ -279,11 +279,14 @@ crossref:doc-build[documentation-makefile, Эта ссылка]
 
 :images-path: articles/freebsd-releng/ <1>
 
-ifdef::env-beastie[] ifdef::backend-html5[]
+ifdef::env-beastie[]
+ifdef::backend-html5[]
 
 [...]
 
-:imagesdir: ../../../images/{images-path} <2> endif::[] endif::[]
+:imagesdir: ../../../images/{images-path} <2>
+endif::[]
+endif::[]
 
 [...]
 
