--- a/documentation/content/ru/books/fdp-primer/examples/_index.adoc
+++ b/documentation/content/ru/books/fdp-primer/examples/_index.adoc
@@ -70,11 +70,17 @@ trademarks: ["general"]
 = Пример книги
 :doctype: book :toc: macro :toclevels: 2 :icons: font :xrefstyle: basic :relfileprefix: ../ :outfilesuffix: :sectnums: :sectnumlevels: 6 :partnums: :chapter-signifier: Chapter :part-signifier: Part :source-highlighter: rouge :experimental: :skip-front-matter: :book: true :pdf: false
 
-ifeval::["{backend}" == "html5"] :chapters-path: content/ru/books/bookname/ endif::[]
+ifeval::["{backend}" == "html5"]
+:chapters-path: content/ru/books/bookname/
+endif::[]
 
-ifeval::["{backend}" == "pdf"] :chapters-path: endif::[]
+ifeval::["{backend}" == "pdf"]
+:chapters-path:
+endif::[]
 
-ifeval::["{backend}" == "epub3"] :chapters-path: endif::[]
+ifeval::["{backend}" == "epub3"]
+:chapters-path:
+endif::[]
 
 [abstract] Аннотация
 
