--- a/documentation/content/ru/books/porters-handbook/makefiles/_index.adoc
+++ b/documentation/content/ru/books/porters-handbook/makefiles/_index.adoc
@@ -108,7 +108,12 @@ endif::[]
 = <.>
 % pkg version -t 1.2 1.2.0
 = <.>
-% pkg version -t 1.2 1.2.p1 > <.> % pkg version -t 1.2.a1 1.2.b1 < <.> % pkg version -t 1.2 1.2p1 < <.>
+% pkg version -t 1.2 1.2.p1
+> <.>
+% pkg version -t 1.2.a1 1.2.b1
+< <.>
+% pkg version -t 1.2 1.2p1
+< <.>
 ....
 
 <.> `1.2` идёт перед `1.3`.
