--- a/documentation/content/ru/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/ru/books/porters-handbook/versions/_index.adoc
@@ -3850,7 +3850,7 @@ Template:
 |1000046
 |link:https://svnweb.freebsd.org/changeset/base/254537[254537]
 |19 августа 2013
-|10-CURRENT после добавления `M_PROTO[9-12]` и удаления `M_FRAG`|M_FIRSTFRAG\|M_LASTFRAG` флаги mbuf (версии link:https://svnweb.freebsd.org/changeset/base/254524[254524], link:https://svnweb.freebsd.org/changeset/base/254526[254526]).
+|10-CURRENT после добавления `M_PROTO[9-12]` и удаления `M_FRAG`\|M_FIRSTFRAG\|M_LASTFRAG` флаги mbuf (версии link:https://svnweb.freebsd.org/changeset/base/254524[254524], link:https://svnweb.freebsd.org/changeset/base/254526[254526]).
 
 |1000047
 |link:https://svnweb.freebsd.org/changeset/base/254627[254627]
