handbook/zfs: Fix vfs.zfs.prefetch.disable sysctl
Reviewed by:	ziaee
Closes:		https://github.com/freebsd/freebsd-doc/pull/554

--- a/documentation/content/en/books/handbook/zfs/_index.adoc
+++ b/documentation/content/en/books/handbook/zfs/_index.adoc
@@ -2671,7 +2671,7 @@ Future disks use 4 KB sectors, and `ashift` values cannot  change after creating
 In some specific cases, the smaller 512-byte block size might be preferable.
 When used with 512-byte disks for databases or as storage for virtual machines, less data transfers during small random reads.
 This can provide better performance when using a smaller ZFS record size.
-* [[zfs-advanced-tuning-prefetch_disable]] `_vfs.zfs.prefetch_disable_` -
+* [[zfs-advanced-tuning-prefetch_disable]] `_vfs.zfs.prefetch.disable_` -
   Disable prefetch. A value of `0` enables and `1` disables it. The default is
   `0`, unless the system has less than 4 GB of RAM. Prefetch works by reading
   larger blocks than requested into the crossref:zfs[zfs-term-arc,ARC] in hopes to soon need the data. If the workload has a large number of random reads, disabling prefetch may actually improve performance by reducing unnecessary reads. Adjust this value at any time with man:sysctl[8].
